Bug 389978 - System settings closes when Input Devices is selected in Wayland session
Summary: System settings closes when Input Devices is selected in Wayland session
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_mouse (other bugs)
Version First Reported In: 5.12.0
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 389068 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-06 22:54 UTC by pmargeti34
Modified: 2018-02-07 17:36 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pmargeti34 2018-02-06 22:54:54 UTC
Plasma is started with startplasmacompositor

System settings immediately closes when Input Devices is selected in Wayland session

Archlinux
Plasma 5.12.0
Linux 4.15.1
Comment 1 Nate Graham 2018-02-06 23:07:07 UTC
Thanks for the bug report! We need a backtrace for this bug to be actionable. Please see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports for more information.
Comment 2 pmargeti34 2018-02-06 23:40:38 UTC
I can't create a debug since Arch is missing debug symbols.
What I *can* give you is console output which happens when Mouse is selected in Input Devices:

[anon@loonix ~]$ systemsettings5 
X Error of failed request:  BadAtom (invalid Atom parameter)
  Major opcode of failed request:  131 (XInputExtension)
  Minor opcode of failed request:  59 ()
  Atom id in failed request:  0x0
  Serial number of failed request:  23
  Current serial number in output stream:  23
Comment 3 Michael D 2018-02-07 01:20:42 UTC
Only the mouse settings crash for me.
Comment 4 Nate Graham 2018-02-07 05:25:05 UTC
Such a shame that Arch doesn't provide proper symbols.
Comment 5 Pawel 2018-02-07 07:31:12 UTC
I can confirm (Arch, Plasma 5.12.0, KF5.43rc1 /self building; it's not part of Arch's repository/, amdgpu for Sea Islands GPU) but only for "mouse".
There's an output of run systemsetting5 via gdb:
[code]Starting program: /usr/bin/systemsettings5 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[New Thread 0x7fffe269e700 (LWP 13069)]
Using Wayland-EGL
[New Thread 0x7fffd1069700 (LWP 13070)]
[New Thread 0x7fffcbfff700 (LWP 13071)]
[New Thread 0x7fffcb7fe700 (LWP 13072)]
[New Thread 0x7fffcaffd700 (LWP 13073)]
[New Thread 0x7fffca7fc700 (LWP 13074)]
[New Thread 0x7fffc9ffb700 (LWP 13075)]
[New Thread 0x7fffc97fa700 (LWP 13076)]
Using the 'xdg-shell-v6' shell integration
[New Thread 0x7fffb1ee7700 (LWP 13081)]
[New Thread 0x7fffb16e6700 (LWP 13082)]
[New Thread 0x7fffb0ee5700 (LWP 13083)]
[New Thread 0x7fffa7fff700 (LWP 13084)]
Trying to convert empty KLocalizedString to QString.
Trying to convert empty KLocalizedString to QString.
Trying to convert empty KLocalizedString to QString.
kcm_input: Using X11 backend
X Error of failed request:  BadAtom (invalid Atom parameter)
  Major opcode of failed request:  131 (XInputExtension)
  Minor opcode of failed request:  59 ()
  Atom id in failed request:  0x0
  Serial number of failed request:  23
  Current serial number in output stream:  23
[Thread 0x7fffa7fff700 (LWP 13084) exited]
[Thread 0x7fffb0ee5700 (LWP 13083) exited]
[Thread 0x7fffb16e6700 (LWP 13082) exited]
[Thread 0x7fffb1ee7700 (LWP 13081) exited]
[Thread 0x7fffc97fa700 (LWP 13076) exited]
[Thread 0x7fffc9ffb700 (LWP 13075) exited]
[Thread 0x7fffca7fc700 (LWP 13074) exited]
[Thread 0x7fffcaffd700 (LWP 13073) exited]
[Thread 0x7fffcb7fe700 (LWP 13072) exited]
[Thread 0x7fffcbfff700 (LWP 13071) exited]
[Thread 0x7fffd1069700 (LWP 13070) exited]
[Thread 0x7fffe269e700 (LWP 13069) exited]
[Inferior 1 (process 13065) exited with code 01][/code]
Comment 6 Kai Uwe Broulik 2018-02-07 09:15:55 UTC
I can confirm the mouse KCM crashes on wayland. It just uses X calls and obviously fails.
Comment 7 Kai Uwe Broulik 2018-02-07 11:52:38 UTC
Git commit 483565374f7992a087585bbf5af55ab05b60d212 by Kai Uwe Broulik.
Committed on 07/02/2018 at 11:52.
Pushed by broulik into branch 'Plasma/5.12'.

[Mouse KCM] Check libinput Atom availability before using them

Otherwise the KCM aborts on XWayland.

CHANGELOG: Fixed mouse settings module crashing on Wayland
FIXED-IN: 5.12.1

Differential Revision: https://phabricator.kde.org/D10359

M  +40   -33   kcms/input/backends/x11/x11mousebackend.cpp

https://commits.kde.org/plasma-desktop/483565374f7992a087585bbf5af55ab05b60d212
Comment 8 Pawel 2018-02-07 15:15:48 UTC
(In reply to Kai Uwe Broulik from comment #7)
Kai's patch works perfectly.
Comment 9 Patrick Silva 2018-02-07 17:36:29 UTC
*** Bug 389068 has been marked as a duplicate of this bug. ***