[Mouse KCM] Check libinput Atom availability before using them

Otherwise the KCM aborts on XWayland.

CHANGELOG: Fixed mouse settings module crashing on Wayland

BUG: 389978
FIXED-IN: 5.12.1

Differential Revision: https://phabricator.kde.org/D10359